- debugged get_knight_moves by catching KeyError thrown when evaluating squares
  that are out of bounds
Added functions:
- get_queen_moves skeleton - no function
- get_queen_moves skeleton - no function
To-Do:
- add get_queen_moves
- add get_king_moves
- add checkmate

2021/08/29
Updated functions:
- added queen rules to get_queen_moves based on code from get_bishop_moves,
  now function works
- removed redundant variable from get_bishop_moves
- fixed typo in comments explaining logic in get_knight_moves
To-Do:
- add get_king_moves
- add checkmate
- get_bishop_moves can be refactored to remove wordy if-else
- get_rook_moves code can be refactored based on get_bishop_moves
- get_knight_moves code can be refactored based on get_bishop_moves
- get_queen_moves code can be refactored based on get_bishop_moves
- get_bishop_moves add catch KeyError for out_of_bounds, remove row/col check
- get_rook_moves add catch KeyError for out_of_bounds, remove row/col check
- get_knight_moves add catch KeyError for out_of_bounds, remove row/col check
- get_queen_moves add catch KeyError for out_of_bounds, remove row/col check

2021/08/30
Updated functions:
- refactored get_bishop_moves by changing out if-else for iterable list of
  steps when evaluating each direction
- refactored get_queen_moves by changing out if-else for iterable list of
  steps when evaluating each direction
- refactored get_knight_moves by changing out if-else for iterable list of
  steps when evaluating each direction
- refactored get_rook_moves by changing 4 for-loops (one for each
  direction) for more concise code based on get_queen_moves
- caught KeyError exception, when evaluating out-of-bounds squares for
  get_bishop_moves, get_queen_moves, get_rook_moves, get_knight_moves
Added functions:
- get_king_moves - given a pawn coordinates as a tuple and board as dict of
  tuples, return all possible valid moves as a list of tuples
To-Do:
- add checkmate
- refactor get_pawn_moves based on get_bishop_moves