@@ -91,6 +91,8 @@ Updated functions:
   direction) for more concise code based on get_queen_moves
 - caught KeyError exception, when evaluating out-of-bounds squares for
   get_bishop_moves, get_queen_moves, get_rook_moves, get_knight_moves
+- added unicode symbols dict to print_board_alg, so that pieces are printed
+  as symbols instead of letter notations on the board
 Added functions:
 - get_king_moves - given a pawn coordinates as a tuple and board as dict of
   tuples, return all possible valid moves as a list of tuples
